fai-kernels (1.10.2) unstable; urgency=low

  * the test, if the patch for #328707 applies, now works as intended. 
    (That means fai-kernels builds with kernel-source-2.4.27-12 in sid.)
  * increased CONFIG_BLK_DEV_RAM_SIZE=8192 as this is needed for the new
    fai-cd and also matches the debian default kernels

 -- Holger Levsen <debian@layer-acht.org>  Sat, 10 Dec 2005 15:03:20 +0100

fai-kernels (1.10.1) unstable; urgency=low

  * added build-depends on gcc-3.3 (closes: #340884)
  * reenabled serial console on 2.6 on i386 (closes: #296932) and also on
    powerpc and amd64 as well as on 2.4 on powerpc
  * streamlined support for Fusion MPT on i386 and amd64
  * added support for 2.4 fai-kernels on alpha - thanks to Steffen Grunewald

 -- Holger Levsen <debian@layer-acht.org>  Wed, 30 Nov 2005 11:42:16 +0100

fai-kernels (1.10) unstable; urgency=low

  * fai-kernels was removed as requested in #323183. Unfortunatly neither
    Thomas Lange (the former maintainer) nor me was informed of that action
    before it was done. 
    This makes FAI unpleasent to use in unstable, and since FAI is in heavy 
    development at the moment we would like to have as many testers as possible 
    - so we decided to re-upload fai-kernels.
    As this is done now, I will stick to my original plan, which is using
    standard debian kernels with "nfsroot"-initrds for FAI. This will make
    fai-kernel unnecessary so it _then_ can be removed again.
  * added support for amd64 and ppc 
  * updated README.non-i386 accordingly
  * updated to use linux-tree-2.6.14 instead of 2.6.8
  * apply the patch for #328707 to kernel-source-2.4.27 during build-time, so 
    that it builds with the latest binutils. As 2.4.27-12 will hopefully soon
    be uploaded with the patch included, the patch will only be applied, if it
    applies cleanly without errors.
  * dont merge kernel config snipplets, rather use one config file per arch
    and kernel version (2.4/2.6)