@@ -3,7 +3,7 @@ Section: admin
 Priority: extra
 Maintainer: Holger Levsen <debian@layer-acht.org>
 Standards-Version: 3.6.2
-Build-Depends: linux-tree-2.6.14, kernel-source-2.4.27 (>=2.4.27-11), modutils, kernel-package, debhelper (>=4), bin86, fakeroot, gcc-3.3
+Build-Depends: linux-tree-2.6.14 [!alpha], kernel-source-2.4.27 (>=2.4.27-11) [i386,alpha], modutils, kernel-package, debhelper (>=4), bin86, fakeroot, gcc-3.3
 
 Package: fai-kernels
 Architecture: i386 powerpc amd64 alpha
